--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,10 @@ header h1, h3 {
     top: 0;
     overflow-y: auto;
   }
+
+  .menu-dropdown a{
+    cursor: pointer;
+  }
   
   .overflow-container {
     position: relative;
