--- a/css/login.css
+++ b/css/login.css
@@ -72,6 +72,27 @@
     margin-left: 2px;
     width: 20px;
   }
+
+  #DeptBTN {
+    margin-bottom: 40px;
+  }
+
+  .BTNAukera {
+    background-color: #A921DA;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 12px;
+  }
+
+  .BTNAukera:hover {
+    background-color: #720499;
+  }
   
   #jarraitu {
     background: purple;
