--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
 
 header {
     background-color: #b512f1;
-    width: 100vw;
+    width: 100%;
     min-height: 200px;
     height: fit-content;
     top: 0; 
