--- a/css/xsl.css
+++ b/css/xsl.css
@@ -1,30 +1,92 @@
 #langileak {
-    display: grid;
-    grid-template-rows:  repeat(4, 250px); 
-    grid-gap: 30px;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(min(25rem, 100%), 1.0fr));
+	display: grid;
+	grid-template-rows: repeat(4, 250px);
+	margin: 50px 0;
+	grid-gap: 20px;
+	justify-content: center;
+	align-items: center;
+	grid-template-columns: repeat(4, minmax(min(150px, 100%), 0.2fr));
 }
 
 #langileak img {
-    width: 200px;
+	width: 200px;
 }
 
-@media (max-width: 1700px) {
-    #langileak {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        background-color: blue;
+.langilekutxa {
+	padding: 5px;
+    background-color: #082AA4;
+	border: 4px solid #7C02A8;
+	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 15px;
+}
+
+#DeptMain {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	min-width: 1000px;
+}
+
+.taulakutxa {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	max-width: 100%;
+	z-index: 1000;
+}
+
+.tauladepart {
+	overflow-x: auto;
+}
+
+.tauladepart table {
+	border: 2px solid #A921DA;
+	height: 50vh;
+	width: 70vw;
+	min-width: 1000px; 
+	table-layout: auto;
+	border-collapse: collapse;
+	border-spacing: 1px;
+	text-align: left;
+}
+
+.tauladepart th {
+	border: 1px solid #F2D5FC;
+	background-color: #A921DA;
+	text-align: center;
+	padding: 20px;
+}
+
+.tauladepart td {
+	border: 1px solid #F2D5FC;
+	padding: 5px;
+}
+
+.DeptIzena {
+	background-color: #123ACA;
+}
+
+.Deptinfo {
+	background-color: #5872D3;
+}
+
+
+@media screen and (max-width: 1320px) {
+	#langileak {
+        grid-template-columns: repeat(auto-fit, minmax(min(30rem, 100%), 0.2fr));
+	}
+}
+
+@media only screen and (max-width: 1050px) {
+    .tauladepart table {
+        width: 90vw;
+        min-width: auto;
     }
+
+	#DeptMain {
+		min-width: 100vw;
+	}
 }
-
-@media (max-width: 800px) {
-    #langileak {
-        grid-template-columns: repeat(1, minmax(0, 1fr));
-        background-color: green;
-    }
-}
-
-
-
 
