--- a/css/enpresa.css
+++ b/css/enpresa.css
@@ -1,7 +1,7 @@
 #langileak {
 	display: grid;
 	grid-template-rows: repeat(4, 250px);
-	margin: 50px 0;
+	margin: 20px 0 50px 0;
 	grid-gap: 20px;
 	justify-content: center;
 	align-items: center;
@@ -12,12 +12,38 @@
 	width: 200px;
 }
 
+.tituluaLang {
+    margin-top: 20px;
+}
+
 .langilekutxa {
-	padding: 5px;
-    background-color: #082AA4;
-	border: 4px solid #7C02A8;
-	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    padding: 5px;
+    background-color: #3A8ED4;
+    border: 2px solid #e9e9e9;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     border-radius: 15px;
+    transition: all 1s; 
+}
+
+.langilekutxa:hover {
+    transform: scale(1.05); 
+    z-index: 1005;
+}
+
+.langileinfo {
+    display: none; 
+    text-align: left;
+}
+
+.langilekutxa:hover .langileinfo {
+    display: block; 
+}
+
+
+.langilekutxa p {
+    font-weight: bold;
 }
 
 #DeptMain {
@@ -52,14 +78,6 @@
 	text-align: left;
 }
 
-button {
-    background-color: greenyellow;
-    color: white;
-    border: 2px solid white;
-    border-radius: 5px;
-}
-
-
 .tauladepart th {
 	border: 1px solid #F2D5FC;
 	background-color: #A921DA;
@@ -74,6 +92,17 @@ button {
 
 .DeptIzena {
 	background-color: #123ACA;
+}
+
+button {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: underline;
+    border: none;
 }
 
 .Deptinfo {
