--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,11 @@ body {
 }
 
 header {
-    background-color: #b512f1;
+    background-image: url(../img/concierto.png);
+    background-position: bottom;
     width: 100%;
     min-height: 200px;
-    height: fit-content;
+    height: 350px;
     top: 0; 
     right: 0;
     display: flex; 
@@ -28,18 +29,17 @@ header {
     justify-content: center; 
     align-items: flex-end; 
     padding: 20px; 
-    border-bottom: 3px solid #2752ED;
 }
 
 header h1, h3 {
     margin: 0 20px 3px 0;
-    color: #FBFBFB;
     float: right;
+    font-size: 40px;
 }
 
 #headerLogoa {
     margin: 0 40px 0 0;
-    width: 100px;
+    width: 120px;
     float: right;
 }
 
@@ -79,7 +79,7 @@ header h1, h3 {
   .hamburger:before {
     content: "\2630"; 
     display: block;
-    color: #2752ED;
+    color: #FBFBFB;
     line-height: 40px;
     font-size: 20px;
   }
@@ -181,13 +181,18 @@ main {
     margin-top: 50px;
 }
 
-#artistak p, #albumak p {
+#artistak h2, #albumak h2 {
     font-size: 30px;
     font-weight: bold;
 }
 
+#artistak p, #albumak p {
+    font-size: 20px;
+    margin: 20px 0 0 0;
+}
+
 #artistak img {
-    margin: 30px 20px 0 20px;
+    margin: 40px 20px 0 20px;
     border-radius: 50%;
     width: 200px;
 }
@@ -198,7 +203,7 @@ main {
 
 #albumak img {
     width: 250px;
-    margin: 20px 20px 0 20px;
+    margin: 40px 20px 0 20px;
     transition: all 0.3s ease-in-out;
 }
 
@@ -244,10 +249,9 @@ footer {
     display: flex;
     flex-direction: row;
     background-color: rgb(33, 33, 33);
-    color: #FBFBFB;
     padding: 20px;
     justify-content: space-evenly;
-    border-top: 2px solid #b512f1;
+    border-top: 2px solid #FBFBFB;
     z-index: 1000;
     flex-wrap: wrap;
 }
@@ -264,10 +268,11 @@ footer ul li {
 footer a {
     color: #FBFBFB;
     text-decoration: none;
+    transition: all 0.3s ease-in-out;
 }
 
 footer a:hover {
-    color: #b512f1;
+    color: #575757;
     text-decoration: underline;
 }
 
@@ -290,4 +295,19 @@ footer a:hover {
 .creative-commons img {
     width: 88px;
     height: 31px;
+}
+
+@media screen and (max-width: 650px) {
+    header {
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      margin: 0;
+    }
+
+    header h1, h3 {
+      margin: 0;
+      text-align: center;
+      float: none;
+    }
 }
