--- a/css/enpresa.css
+++ b/css/enpresa.css
@@ -18,7 +18,7 @@
 
 .langilekutxa {
     padding: 5px;
-    background-color: #3A8ED4;
+    background-color: #1878C8;
     border: 2px solid #e9e9e9;
     display: flex;
     flex-direction: column;
@@ -54,6 +54,10 @@
 	min-width: 1000px;
 }
 
+#DeptMain h1, #DeptMain p {
+	margin: 20px 0 0 0;
+}
+
 .taulakutxa {
 	display: flex;
 	justify-content: center;
@@ -68,7 +72,8 @@
 }
 
 .tauladepart table {
-	border: 2px solid #A921DA;
+	margin: 50px;
+	border: 2px solid #1e1e1e;
 	height: 50vh;
 	width: 70vw;
 	min-width: 1000px; 
@@ -79,19 +84,19 @@
 }
 
 .tauladepart th {
-	border: 1px solid #F2D5FC;
-	background-color: #A921DA;
+	border: 1px solid #363636;
+	background-color: #515151;
 	text-align: center;
 	padding: 20px;
 }
 
 .tauladepart td {
-	border: 1px solid #F2D5FC;
+	border: 1px solid #363636;
 	padding: 5px;
 }
 
 .DeptIzena {
-	background-color: #123ACA;
+	background-color: #1e1e1e;
 }
 
 button {
@@ -105,8 +110,13 @@ button {
     border: none;
 }
 
+span img {
+	width: 15px;
+	margin-left: 10px;
+}
+
 .Deptinfo {
-	background-color: #5872D3;
+	background-color: #636363;
 }
 
 
@@ -124,6 +134,13 @@ button {
 
 	#DeptMain {
 		min-width: 100vw;
+	}
+}
+
+@media only screen and (max-width: 750px) {
+	#DeptMain h1, #DeptMain p {
+		text-align: center;
+		width: 200px;
 	}
 }
 
