--- a/css/enpresa.css
+++ b/css/enpresa.css
@@ -8,7 +8,17 @@
 	grid-template-columns: repeat(4, minmax(min(150px, 100%), 0.2fr));
 }
 
-#langileak img {
+#langileaArd {
+	display: grid;
+	grid-template-rows: repeat(auto-fit, 250px);
+	margin: 20px 0 50px 0;
+	grid-gap: 20px;
+	justify-content: center;
+	align-items: center;
+	grid-template-columns: repeat(4, minmax(min(150px, 100%), 0.2fr));
+}
+
+#langileak img, #langileaArd img {
 	width: 200px;
 }
 
@@ -46,10 +56,11 @@
     font-weight: bold;
 }
 
-.arduraAukera {
+.arduraAukera, #izenaKutxa {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-around;
+	flex-wrap: wrap;
 	margin: 20px;
 }
 
@@ -81,6 +92,23 @@
 
 #DeptMain h1, #DeptMain p {
 	margin: 20px 0 0 0;
+}
+
+#AtzeraBTN, #DEPTAukeraBTN {
+	padding: 5px;
+	height: 50px;
+	border-radius: 5px;
+	background-color: #1e1e1e;
+	border: 2px solid #e9e9e9;
+	text-decoration: none;
+	float: right;
+	cursor: pointer;
+	margin: 0 20px 0 0;
+	width: 300px;
+}
+
+#AtzeraBTN:hover, #DEPTAukeraBTN:hover {
+	background-color: #636363;
 }
 
 .taulakutxa {
@@ -145,7 +173,7 @@ span img {
 
 
 @media screen and (max-width: 1320px) {
-	#langileak {
+	#langileak, #langileaArd {
         grid-template-columns: repeat(auto-fit, minmax(min(30rem, 100%), 0.2fr));
 	}
 }
