--- a/css/enpresa.css
+++ b/css/enpresa.css
@@ -56,12 +56,13 @@
     font-weight: bold;
 }
 
-.arduraAukera, #izenaKutxa {
+.arduraAukera, #izenaKutxa, #DeptInfoEtaBTN, #DeptLangKutxa {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
 	flex-wrap: wrap;
 	margin: 20px;
+	z-index: 1000;
 }
 
 .arduraAukera label {
@@ -71,7 +72,7 @@
 #ardura {
 	width: 200px;
 	padding: 5px;
-	margin: 5px 0;
+	height: 50px;
 	border-radius: 5px;
 	border: 1px solid #e9e9e9;
 	background-color: #1e1e1e;
@@ -84,31 +85,46 @@
 
 #DeptMain {
 	display: flex;
-	justify-content: center;
-	align-items: center;
 	margin: 0 auto;
 	min-width: 1000px;
 }
 
-#DeptMain h1, #DeptMain p {
+#DeptInfo {
+	text-align: left;
+}
+
+#DeptMain p {
 	margin: 20px 0 0 0;
 }
 
-#AtzeraBTN, #DEPTAukeraBTN {
+#formArdura {
+	justify-content: space-evenly;
+	width: 500px;
+}
+
+#formArdura, #izenaKutxa h1 {
+	display: flex;
+	align-items: center;
+	margin: 0 20px 0 0;
+}
+
+#NavBTN {
 	padding: 5px;
 	height: 50px;
 	border-radius: 5px;
-	background-color: #1e1e1e;
-	border: 2px solid #e9e9e9;
+	background-color: #363636;
+	border: 1px solid #e9e9e9;
 	text-decoration: none;
 	float: right;
 	cursor: pointer;
 	margin: 0 20px 0 0;
 	width: 300px;
+	transition: all 0.5s ease-in-out;
 }
 
-#AtzeraBTN:hover, #DEPTAukeraBTN:hover {
+#NavBTN:hover {
 	background-color: #636363;
+	border: #1e1e1e;
 }
 
 .taulakutxa {
@@ -187,12 +203,30 @@ span img {
 	#DeptMain {
 		min-width: 100vw;
 	}
-}
 
-@media only screen and (max-width: 750px) {
 	#DeptMain h1, #DeptMain p {
 		text-align: center;
-		width: 200px;
 	}
 }
+
+@media screen and (max-width: 980px) {
+	#NavBTN {
+        margin: 10px;
+	}
+
+
+}
+
+@media screen and (max-width: 700px) {
+
+	#DeptInfoEtaBTN {
+		width: 200px;
+		margin: auto;
+		justify-content: center;
+	}
+
+}
+
+
+
 
