--- a/css/enpresa.css
+++ b/css/enpresa.css
@@ -1,3 +1,5 @@
+/* Langileak */
+
 #langileak {
 	display: grid;
 	grid-template-rows: repeat(4, 250px);
@@ -56,6 +58,10 @@
     font-weight: bold;
 }
 
+/* Langileak */
+
+/* Ardurak */
+
 .arduraAukera, #izenaKutxa, #DeptInfoEtaBTN, #DeptLangKutxa {
 	display: flex;
 	flex-direction: row;
@@ -82,6 +88,10 @@
 	padding: 5px;
 	background-color: #1e1e1e;
 }
+
+/* Ardurak */
+
+/* Departamentuak */
 
 #DeptMain {
 	display: flex;
@@ -126,6 +136,10 @@
 	background-color: #636363;
 	border: #1e1e1e;
 }
+
+/* Departamentuak */
+
+/* Taula departamentuak */
 
 .taulakutxa {
 	display: flex;
@@ -187,7 +201,9 @@ span img {
 	background-color: #636363;
 }
 
+/* Taula departamentuak */
 
+/* Responsive */
 @media screen and (max-width: 1320px) {
 	#langileak, #langileaArd {
         grid-template-columns: repeat(auto-fit, minmax(min(30rem, 100%), 0.2fr));
@@ -213,8 +229,6 @@ span img {
 	#NavBTN {
         margin: 10px;
 	}
-
-
 }
 
 @media screen and (max-width: 700px) {
@@ -224,7 +238,6 @@ span img {
 		margin: auto;
 		justify-content: center;
 	}
-
 }
 
 
